--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -22,6 +22,12 @@ a.active{
     font-weight: bold;
 }
 
+.dialogsItemLink img {
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+}
+
 .messages {
     padding: 20px;
     font-size: 20px;
@@ -30,3 +36,4 @@ a.active{
 .message {
     margin-bottom: 10px;
 }
+
