added axios requests

--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,11 @@
 
     grid-template-rows: 60px 1fr;
     grid-template-columns: 2fr 10fr;
-    grid-gap: 10px;
+    /*grid-gap: 10px;*/
 }
 
 .app-wrapper-content {
     grid-area: c;
-    background-color: aquamarine;
+    background-color: #61dafb;
+    /*background-color: aquamarine;*/
 }
